[tool.poetry]
name = "datastructures_and_algorithms"
version = "0.1.0"
description = ""
authors = ["Kanishk Varshney <varskann1993@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "5.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
rope = "^0.17.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
